# jcode-conf-py

./: README.md  justfile  pyproject.toml
design/: 01-core-concepts.md  02-core-arch.md  03-api-and-usage.md  04-feature-path-constants.md  05-feature-env-override.md
src/jcode_conf/: __init__.py  config.py  paths.py
src/jcode_conf/tests/: test_paths.py
