[project]
name = "jcode-conf-py"
version = "0.1.0"
description = "Configuration path constants extracted from jcode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcode_conf"]

[tool.pytest.ini_options]
testpaths = ["src/jcode_conf/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
